# glove

.ipynb_checkpoints/: Untitled-checkpoint.ipynb
week1/: .gitignore  pyproject.toml
