[project]
name = "week1"
version = "0.1.0"
description = "doing dat homework"
authors = [
    {name = "jaehyon",email = "bananasplit333@users.noreply.github.com"}
]
license = {text = "penis"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "langchain-core (>=0.3.79,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "langsmith (>=0.4.37,<0.5.0)",
    "openai (>=2.3.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
